add deps. rename jspm config file.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>At the Drive-in</title>
     <script src="jspm_packages/system.src.js"></script>
-    <script src="config.js"></script>
+    <script src="jspm.conf.js"></script>
 </head>
 <body>
     <app></app>
