add some sweet styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>At the Drive-in</title>
+    <link rel="stylesheet" href="content/css/app.css">
     <script src="jspm_packages/system.src.js"></script>
     <script src="jspm.conf.js"></script>
 </head>
