--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="jspm.conf.js"></script>
 </head>
 <body>
-    <app></app>
+    <div id="app"></div>
     <script>
         System.import('app');
     </script>
