more bootstrap stuff

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="content/css/app.css">
     <script src="jspm_packages/system.src.js"></script>
     <script src="jspm.conf.js"></script>
+    <script src="content/js/jquery-2.1.4.min.js"></script>
+    <script src="content/js/bootstrap.js"></script>
 </head>
 <body>
     <div id="app"></div>
