--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
     <title>At the Drive-in</title>
     <link rel="stylesheet" href="content/css/bootstrap.css">
     <link rel="stylesheet" href="content/css/app.css">
-    <script src="jspm_packages/system.src.js"></script>
-    <script src="jspm.conf.js"></script>
-    <script src="content/js/jquery-2.1.4.min.js"></script>
-    <script src="content/js/bootstrap.js"></script>
 </head>
 <body>
     <div id="app"></div>
-    <script>
-        System.import('app');
-    </script>
+    <script src="content/js/jquery-2.1.4.min.js"></script>
+    <script async src="content/js/bootstrap.js"></script>
+    <script async src="/static/bundle.js"></script>
 </body>
 </html>
